# rc-impossible-day-2024

./: .gitignore  LICENSE  README.md
bloggen/: Cargo.toml
bloggen/src/: main.rs
bloggen/templates/: config.toml  post.md
homepage/: index.html  styles.css
zulipbot/: .gitignore  Cargo.toml
zulipbot/src/: bloggen.rs  get_events.rs  main.rs  register_event_queue.rs  zulip.rs
zulipbot/templates/: _index.md  post.md
