[package]
name = "zulipbot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.10.0"
dotenvy = "0.15.7"
futures = "0.3.31"
redb = "2.2.0"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tera = "1.20.0"
tokio = { version = "1.41.1", features = ["full"] }
